updated resources issues

--- a/index.html
+++ b/index.html
@@ -67,5 +67,5 @@
     </div>
   </footer>
 </body>
-  <script type="text/javascript" src="/main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </html>
