--- a/index.html
+++ b/index.html
@@ -1,71 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-  
-  <title>Frontend Mentor | Calculator app</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
 
-</head>
-<body>
-
-  <main>
-    <section>
-      <div class="container">
-        <div class="top">
-          <span class="logo">calc</span>
-          <div class="theme">
-            <div class="number-theme">
-              <span id="one">1</span>
-              <span id="two">2</span>
-              <span id="three">3</span>
-            </div>
-            <div class="theme-head">
-              <span>THEME</span>
-              <span class="toggle-btn" id="toggle-btn">
-                <span class="inner-circle purple light" id="circle-btn"></span>
-              </span>
+    <title>Frontend Mentor | Calculator app</title>
+  </head>
+  <body>
+    <main>
+      <section>
+        <div class="container">
+          <div class="top">
+            <span class="logo">calc</span>
+            <div class="theme">
+              <div class="number-theme">
+                <span id="one">1</span>
+                <span id="two">2</span>
+                <span id="three">3</span>
+              </div>
+              <div class="theme-head">
+                <span>THEME</span>
+                <span class="toggle-btn" id="toggle-btn">
+                  <span
+                    class="inner-circle purple light"
+                    id="circle-btn"
+                  ></span>
+                </span>
+              </div>
             </div>
           </div>
+          <form class="calculator" name="calc">
+            <input
+              class="value"
+              id="value_input"
+              type="text"
+              name="txt"
+              readonly=""
+            />
+            <div class="num-box">
+              <span class="num" onclick="document.calc.txt.value +='7'">7</span>
+              <span class="num" onclick="document.calc.txt.value +='8'">8</span>
+              <span class="num" onclick="document.calc.txt.value +='9'">9</span>
+              <span class="num del" id="del" onclick="backSpace()">DEL</span>
+              <span class="num" onclick="document.calc.txt.value +='4'">4</span>
+              <span class="num" onclick="document.calc.txt.value +='5'">5</span>
+              <span class="num" onclick="document.calc.txt.value +='6'">6</span>
+              <span class="num" onclick="document.calc.txt.value +='+'">+</span>
+              <span class="num" onclick="document.calc.txt.value +='1'">1</span>
+              <span class="num" onclick="document.calc.txt.value +='2'">2</span>
+              <span class="num" onclick="document.calc.txt.value +='3'">3</span>
+              <span class="num" onclick="document.calc.txt.value +='-'">-</span>
+              <span class="num" onclick="document.calc.txt.value +='.'">.</span>
+              <span class="num" onclick="document.calc.txt.value +='0'">0</span>
+              <span class="num" onclick="document.calc.txt.value +='/'">/</span>
+              <span class="num" onclick="document.calc.txt.value +='*'"
+                ><i class="fas fa-asterisk"></i
+              ></span>
+              <span class="num reset" onclick="document.calc.txt.value =''"
+                >RESET</span
+              >
+              <span
+                class="num equal"
+                onclick="document.calc.txt.value = eval(calc.txt.value)"
+                >=</span
+              >
+            </div>
+          </form>
         </div>
-        <form class="calculator" name="calc">
-          <input class="value" id="value_input" type="text" name="txt" readonly="">
-          <div class="num-box">
-            <span class="num" onclick="document.calc.txt.value +='7'">7</span>
-            <span class="num" onclick="document.calc.txt.value +='8'">8</span>
-            <span class="num" onclick="document.calc.txt.value +='9'">9</span>
-            <span class="num del" id="del" onclick = backSpace()>DEL</span>
-            <span class="num" onclick="document.calc.txt.value +='4'">4</span>
-            <span class="num" onclick="document.calc.txt.value +='5'">5</span>
-            <span class="num" onclick="document.calc.txt.value +='6'">6</span>
-            <span class="num" onclick="document.calc.txt.value +='+'">+</span>
-            <span class="num" onclick="document.calc.txt.value +='1'">1</span>
-            <span class="num" onclick="document.calc.txt.value +='2'">2</span>
-            <span class="num" onclick="document.calc.txt.value +='3'">3</span>
-            <span class="num" onclick="document.calc.txt.value +='-'">-</span>
-            <span class="num" onclick="document.calc.txt.value +='.'">.</span>
-            <span class="num" onclick="document.calc.txt.value +='0'">0</span>
-            <span class="num" onclick="document.calc.txt.value +='/'">/</span>
-            <span class="num" onclick="document.calc.txt.value +='X'">X</span>
-            <span class="num reset" onclick="document.calc.txt.value =''">RESET</span>
-            <span class="num equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
-          </div>
-        </form>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Sudip Maiti</a>.
-    </div>
-  </footer>
-</body>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Sudip Maiti</a>.
+      </div>
+    </footer>
+  </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
