added placeholder text

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               type="text"
               name="txt"
               readonly=""
+              placeholder="0"
             />
             <div class="num-box">
               <span class="num" onclick="document.calc.txt.value +='7'">7</span>
